Fix bad layout on small/mobile devices for news page

--- a/app/assets/stylesheets/news_items.css.sass
+++ b/app/assets/stylesheets/news_items.css.sass
@@ -1,6 +1,7 @@
+@import bootstrap/variables
 .news_item-editor
-  position: fixed
   font-size: 90%
+
   .news_item_summary
     textarea
       height: 3em
@@ -9,3 +10,5 @@
     textarea
       height: 5em
 
+  @media (min-width: $screen-md-min)
+    position: fixed
